db_connection added

--- a/css/index.css
+++ b/css/index.css
@@ -10,4 +10,13 @@
   color: #495057;
 }
 
+.parallox{
+  height: 300px;
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 
